
===========================================================================
MARK: released gwenhywfar-1.13.3 (2005/06/14)
===========================================================================


2005/06/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- replaced "&>" by "2>" in configure.ac (should fix problems with BSD shell
  reported by Sam Lawrance)
- args.c: Removed use of flag GWEN_PATH_FLAGS_CREATE_VAR


2005/06/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Buffer_InsertRoom: Was not adjusting usedBytes field
- fixed a bug in GWEN_Buffer_AllocRoom: Was not adding +1 for trailing NULL
  byte


===========================================================================
MARK: released gwenhywfar-1.13.2 (2005/05/25)
===========================================================================


2005/05/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed GWEN_DB_VariableExists(): Now works with paths as well


===========================================================================
MARK: released gwenhywfar-1.13.1 (2005/05/24)
===========================================================================


2005/05/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in CSV-exporter: Had problems with INT variables (was always
  expecting CHAR values)


===========================================================================
MARK: released gwenhywfar-1.13.0 (2005/05/20)
===========================================================================


2005/05/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_XMLNode_GetLocalizedCharValue()
- GWEN_PluginDescription_new() now uses localized version of elements in
  XML file


2005/05/13: Martin Preuss<martin@libchipcard.de>