@@ -113,6 +113,23 @@ int write_ha_file_c(ARGUMENTS *args, GWEN_XMLNODE *node) {
   if (rv)
     return rv;
 
+  if (strcasecmp(nacc, "public")==0) {
+    GWEN_BufferedIO_WriteLine(bio, "#ifdef __cplusplus");
+    GWEN_BufferedIO_WriteLine(bio, "extern \"C\" {");
+    GWEN_BufferedIO_WriteLine(bio, "#endif");
+    GWEN_BufferedIO_WriteLine(bio, "");
+    GWEN_BufferedIO_Write(bio, "typedef struct ");
+    GWEN_BufferedIO_Write(bio, id);
+    GWEN_BufferedIO_Write(bio, " ");
+    GWEN_BufferedIO_Write(bio, id);
+    GWEN_BufferedIO_WriteLine(bio, ";");
+    GWEN_BufferedIO_WriteLine(bio, "");
+    GWEN_BufferedIO_WriteLine(bio, "#ifdef __cplusplus");
+    GWEN_BufferedIO_WriteLine(bio, "} /* __cplusplus */");
+    GWEN_BufferedIO_WriteLine(bio, "#endif");
+    GWEN_BufferedIO_WriteLine(bio, "");
+  }
+
   GWEN_BufferedIO_WriteLine(bio, "#include <gwenhywfar/db.h>");
 
   if (strcasecmp(get_struct_property(node, "inherit", ""),
@@ -154,15 +171,6 @@ int write_ha_file_c(ARGUMENTS *args, GWEN_XMLNODE *node) {
   if (write_h_enums(args, node, bio, "public")) {
     DBG_ERROR(0, "Error writing enum types");
     return -1;
-  }
-
-  if (strcasecmp(nacc, "public")==0) {
-    GWEN_BufferedIO_Write(bio, "typedef struct ");
-    GWEN_BufferedIO_Write(bio, id);
-    GWEN_BufferedIO_Write(bio, " ");
-    GWEN_BufferedIO_Write(bio, id);
-    GWEN_BufferedIO_WriteLine(bio, ";");
-    GWEN_BufferedIO_WriteLine(bio, "");
   }
 
   if (strcasecmp(get_struct_property(node, "inherit", ""),
